@@ -12,6 +12,17 @@
 <!-- structure inside out for this chapter. Each arch has a document. -->
 <!-- Note: arch hppa is currently missing -->
 
+<warning arch="x86;powerpc"><para>
+
+If you have any other operating systems on your system that you wish to
+keep (dual boot setup), you should make that they have been properly shut
+down <em>before</em> you boot the installer.
+Installing an operating system while another operating system is in
+hibernation (has been suspended to disk) could result in loss of or damage
+to the state of the suspended operating system which could cause problems
+when it is rebooted.
+
+</para></warning>
 <note condition="gtk"><para>
 
 For information on how to boot the graphical installer, see
