@@ -44,13 +44,14 @@ installation-guide (2007xxxx) UNRELEASED; urgency=low
   * Add some information about creating device files in the appendix on chroot
     installs; also add a note that the appendix only covers the basic steps
     of a chroot install.
+  * Warn against installing Debian while another OS is hibernated.
 
   [ Joey Hess ]
   * Document how to preseed partman-auto to use only available disk, no matter
     what it's name is.
   * debian/rules: call dh_md5sums.
 
- -- Frans Pop <fjp@debian.org>  Sun, 21 Oct 2007 15:14:48 +0200
+ -- Frans Pop <fjp@debian.org>  Wed, 31 Oct 2007 20:20:16 +0100
 
 installation-guide (20070319) unstable; urgency=low
 
